ProjectSortFilterModel: Create a sort proxy model
Sort only the first level (assembly name) by alphabetic order
Keep the second level sort by row index

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -48,6 +48,8 @@ set(
   "misc/last_dir.cpp"
   "misc/move_struct.hpp"
   "misc/project_model_enum.hpp"
+  "misc/project_sort_filter_model.hpp"
+  "misc/project_sort_filter_model.cpp"
 )
 
 qt4_wrap_cpp(
